Added Data Configuration Section
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/data_utils/dataset_preparation.ipynb
+++ b/code/data_utils/dataset_preparation.ipynb
@@ -871,6 +871,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Function to join all the sub-datasets into a single dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subfolders joined successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "def join_subfolders(folder_path):\n",
+    "    for subfolder in os.listdir(folder_path):  # test, val, train\n",
+    "        subfolder_path = os.path.join(folder_path, subfolder)\n",
+    "        if os.path.isdir(subfolder_path):\n",
+    "            # Create \"all\" folder if it doesn't exist\n",
+    "            all_folder_path = os.path.join(subfolder_path, \"all\")\n",
+    "            all_images_folder = os.path.join(all_folder_path, \"images\")\n",
+    "            all_labels_folder = os.path.join(all_folder_path, \"labels\")\n",
+    "            os.makedirs(all_folder_path, exist_ok=True)\n",
+    "            os.makedirs(all_images_folder, exist_ok=True)\n",
+    "            os.makedirs(all_labels_folder, exist_ok=True)\n",
+    "\n",
+    "            # Iterate over subsubfolders in subfolder (video folders)\n",
+    "            for subsubfolder in os.listdir(subfolder_path):\n",
+    "                if subsubfolder == \"all\":\n",
+    "                    continue\n",
+    "                subsubfolder_path = os.path.join(subfolder_path, subsubfolder)\n",
+    "                if os.path.isdir(subsubfolder_path):\n",
+    "                    #  Copy image files to the \"images\" folder\n",
+    "                    image_files = os.listdir(os.path.join(subsubfolder_path, \"images\"))\n",
+    "                    for image_file in image_files:\n",
+    "                        shutil.copy2(\n",
+    "                            os.path.join(subsubfolder_path, \"images\", image_file),\n",
+    "                            os.path.join(all_images_folder, image_file),\n",
+    "                        )\n",
+    "\n",
+    "                    # Copy label files to the \"labels\" folder\n",
+    "                    label_files = os.listdir(os.path.join(subsubfolder_path, \"labels\"))\n",
+    "                    for label_file in label_files:\n",
+    "                        shutil.copy2(\n",
+    "                            os.path.join(subsubfolder_path, \"labels\", label_file),\n",
+    "                            os.path.join(all_labels_folder, label_file),\n",
+    "                        )\n",
+    "\n",
+    "    print(\"Subfolders joined successfully!\")\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "folder_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/semiopen\"\n",
+    "join_subfolders(folder_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Function to create the final YOLO Training set"
    ]
   },
@@ -884,18 +951,9 @@
      "output_type": "stream",
      "text": [
       "Nombre d'images par classe dans chaque ensemble :\n",
-      "Train:\n",
-      "  Close : 3662 images\n",
-      "  Open : 1722 images\n",
-      "  Semi-Open : 1178 images\n",
-      "Val:\n",
-      "  Close : 816 images\n",
-      "  Open : 310 images\n",
-      "  Semi-Open : 372 images\n",
-      "Test:\n",
-      "  Close : 802 images\n",
-      "  Open : 314 images\n",
-      "  Semi-Open : 383 images\n"
+      "Training set: Number of images: 3534 and Ratio: 0.70\n",
+      "Validation set: Number of images: 773 and Ratio: 0.15\n",
+      "Test set: Number of images: 773 and Ratio: 0.15\n"
      ]
     }
    ],
@@ -903,49 +961,127 @@
     "import os\n",
     "import shutil\n",
     "import random\n",
+    "import math\n",
+    "\n",
     "\n",
     "def collect_images(source_folder, split):\n",
     "    all_images = []\n",
     "    split_path = os.path.join(source_folder, split)\n",
-    "    for video_folder in os.listdir(split_path):\n",
-    "        images_path = os.path.join(split_path, video_folder, \"images\")\n",
+    "    all_folder_path = os.path.join(split_path, \"all\")\n",
+    "\n",
+    "    if os.path.isdir(all_folder_path):\n",
+    "        images_path = os.path.join(all_folder_path, \"images\")\n",
     "        if os.path.isdir(images_path):\n",
-    "            all_images.extend([os.path.join(images_path, f) for f in os.listdir(images_path) \n",
-    "                               if f.endswith((\".jpg\", \".jpeg\", \".png\"))])\n",
+    "            all_images.extend(\n",
+    "                [\n",
+    "                    os.path.join(images_path, f)\n",
+    "                    for f in os.listdir(images_path)\n",
+    "                    if f.endswith((\".jpg\", \".jpeg\", \".png\"))\n",
+    "                ]\n",
+    "            )\n",
     "    return all_images\n",
     "\n",
-    "def split_and_balance_dataset(source_folders, dest_folder, train_ratio, val_ratio, test_ratio):\n",
-    "    dataset = {key: {} for key in source_folders.keys()}\n",
     "\n",
-    "    for key, folder in source_folders.items():\n",
-    "        for split in [\"train\", \"val\", \"test\"]:\n",
-    "            dataset[key][split] = collect_images(folder, split)\n",
-    "\n",
-    "    # Copier les fichiers vers la destination au format YOLO\n",
+    "def split_and_balance_dataset(\n",
+    "    source_folders, dest_folder, train_ratio, val_ratio, test_ratio\n",
+    "):\n",
+    "    # Créer le dossier de destination s'il n'existe pas\n",
+    "    os.makedirs(dest_folder, exist_ok=True)\n",
+    "    # Create subfolders for train, val, and test\n",
     "    for split in [\"train\", \"val\", \"test\"]:\n",
-    "        yolo_split = \"val\" if split == \"val\" else split\n",
-    "        images_folder = os.path.join(dest_folder, yolo_split, \"images\")\n",
-    "        labels_folder = os.path.join(dest_folder, yolo_split, \"labels\")\n",
-    "        os.makedirs(images_folder, exist_ok=True)\n",
-    "        os.makedirs(labels_folder, exist_ok=True)\n",
+    "        os.makedirs(os.path.join(dest_folder, split), exist_ok=True)\n",
+    "        for subfolder in [\"images\", \"labels\"]:\n",
+    "            os.makedirs(os.path.join(dest_folder, split, subfolder), exist_ok=True)\n",
     "\n",
-    "        with open(os.path.join(dest_folder, f\"{yolo_split}.txt\"), \"w\") as f:\n",
-    "            for key in dataset.keys():\n",
-    "                for image_path in dataset[key][split]:\n",
-    "                    image_name = os.path.basename(image_path)\n",
-    "                    label_name = os.path.splitext(image_name)[0] + \".txt\"\n",
-    "                    label_path = os.path.join(os.path.dirname(os.path.dirname(image_path)), \"labels\", label_name)\n",
+    "    # Collecter les images de chaque classe\n",
+    "    dataset = {}\n",
+    "    for key, source_folder in source_folders.items():\n",
+    "        dataset[key] = {\n",
+    "            \"train\": collect_images(source_folder, \"train\"),\n",
+    "            \"val\": collect_images(source_folder, \"val\"),\n",
+    "            \"test\": collect_images(source_folder, \"test\"),\n",
+    "        }\n",
     "\n",
-    "                    # Copier l'image\n",
-    "                    shutil.copy(image_path, os.path.join(images_folder, image_name))\n",
-    "                    # Écrire le chemin relatif dans le fichier liste\n",
-    "                    f.write(f\"{yolo_split}/images/{image_name}\\n\")\n",
+    "    # Compute the min number of images for each class in each set (train, val, test)\n",
+    "    # It should be a dictionary with the split as key and the min number of images as values\n",
+    "    min_images = {}\n",
+    "    for split in [\"train\", \"val\", \"test\"]:\n",
+    "        min_images[split] = min(len(dataset[key][split]) for key in dataset.keys())\n",
     "\n",
-    "                    # Copier l'étiquette si elle existe\n",
-    "                    if os.path.exists(label_path):\n",
-    "                        shutil.copy(label_path, os.path.join(labels_folder, label_name))\n",
-    "                    else:\n",
-    "                        print(f\"Attention : Étiquette manquante pour {image_name} dans {os.path.dirname(image_path)}\")\n",
+    "    # Keep only the min number of images for each class in each set\n",
+    "    for key in dataset.keys():\n",
+    "        for split in [\"train\", \"val\", \"test\"]:\n",
+    "            random.shuffle(dataset[key][split])  # Shuffle the images\n",
+    "            dataset[key][split] = dataset[key][split][\n",
+    "                : min_images[split]\n",
+    "            ]  # Keep only the min number of images\n",
+    "\n",
+    "    # Create train, val, and test sets that concatenate the images from all classes\n",
+    "    train_set = []\n",
+    "    val_set = []\n",
+    "    test_set = []\n",
+    "    for key in dataset.keys():\n",
+    "        train_set.extend(dataset[key][\"train\"])\n",
+    "        val_set.extend(dataset[key][\"val\"])\n",
+    "        test_set.extend(dataset[key][\"test\"])\n",
+    "\n",
+    "    # Shuffle the sets\n",
+    "    random.shuffle(train_set)\n",
+    "    random.shuffle(val_set)\n",
+    "    random.shuffle(test_set)\n",
+    "\n",
+    "    # total number of images\n",
+    "    total_images = len(train_set) + len(val_set) + len(test_set)\n",
+    "\n",
+    "    # Training set Number of images\n",
+    "    val_num_images = math.floor(total_images * val_ratio)\n",
+    "    test_num_images = math.floor(total_images * test_ratio)\n",
+    "    train_num_images = total_images - val_num_images - test_num_images\n",
+    "    if train_num_images > len(train_set):\n",
+    "        train_num_images = len(train_set)\n",
+    "\n",
+    "    # Adjust the number of images in test and val sets to match the ratios\n",
+    "    total = val_num_images + test_num_images + train_num_images\n",
+    "    if ((val_num_images + test_num_images) / total) > (val_ratio + test_ratio):\n",
+    "        while ((val_num_images + test_num_images) / total) > (val_ratio + test_ratio):\n",
+    "            test_num_images -= 1\n",
+    "            val_num_images -= 1\n",
+    "\n",
+    "    # Balance the sets\n",
+    "    train_set = train_set[:train_num_images]\n",
+    "    val_set = val_set[:val_num_images]\n",
+    "    test_set = test_set[:test_num_images]\n",
+    "\n",
+    "    # Copy the files to the destination in YOLO format\n",
+    "    for split in [\"train\", \"val\", \"test\"]:\n",
+    "        dataset = (\n",
+    "            train_set if split == \"train\" else val_set if split == \"val\" else test_set\n",
+    "        )\n",
+    "\n",
+    "        # Copy the images\n",
+    "        images_folder = os.path.join(dest_folder, split, \"images\")\n",
+    "        labels_folder = os.path.join(dest_folder, split, \"labels\")\n",
+    "\n",
+    "        with open(os.path.join(dest_folder, f\"{split}.txt\"), \"w\") as f:\n",
+    "            for image_path in dataset:\n",
+    "                image_name = os.path.basename(image_path)\n",
+    "                label_name = os.path.splitext(image_name)[0] + \".txt\"\n",
+    "                label_path = os.path.join(\n",
+    "                    os.path.dirname(os.path.dirname(image_path)), \"labels\", label_name\n",
+    "                )\n",
+    "\n",
+    "                # Copy the image\n",
+    "                shutil.copy(image_path, os.path.join(images_folder, image_name))\n",
+    "                # Write the relative path in the list file\n",
+    "                f.write(f\"{split}/images/{image_name}\\n\")\n",
+    "\n",
+    "                # Copy the label if it exists\n",
+    "                if os.path.exists(label_path):\n",
+    "                    shutil.copy(label_path, os.path.join(labels_folder, label_name))\n",
+    "                else:\n",
+    "                    print(\n",
+    "                        f\"Warning: Label missing for {image_name} in {os.path.dirname(image_path)}\"\n",
+    "                    )\n",
     "\n",
     "    # Créer le fichier data.yaml\n",
     "    with open(os.path.join(dest_folder, \"data.yaml\"), \"w\") as f:\n",
@@ -956,13 +1092,18 @@
     "        f.write(f\"names: {list(source_folders.keys())}\\n\")\n",
     "\n",
     "    # Imprimer les statistiques\n",
+    "    total_images = len(train_set) + len(val_set) + len(test_set)\n",
     "    print(\"Nombre d'images par classe dans chaque ensemble :\")\n",
-    "    for split in [\"train\", \"val\", \"test\"]:\n",
-    "        yolo_split = \"val\" if split == \"val\" else split\n",
-    "        print(f\"{yolo_split.capitalize()}:\")\n",
-    "        for key in source_folders:\n",
-    "            print(f\"  {key} : {len(dataset[key][split])} images\")\n",
-    " \n",
+    "    print(\n",
+    "        f\"Training set: Number of images: {len(train_set)} and Ratio: {len(train_set) / total_images:.2f}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"Validation set: Number of images: {len(val_set)} and Ratio: {len(val_set) / total_images:.2f}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"Test set: Number of images: {len(test_set)} and Ratio: {len(test_set) / total_images:.2f}\"\n",
+    "    )\n",
+    "\n",
     "\n",
     "# Exemple d'utilisation\n",
     "source_folders = {\n",
@@ -970,11 +1111,16 @@
     "    \"Open\": \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/open\",\n",
     "    \"Semi-Open\": \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/semiopen\",\n",
     "}\n",
+    "train_ratio = 0.7\n",
+    "val_ratio = 0.15\n",
+    "test_ratio = 0.15\n",
     "\n",
-    "destination_folder_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/evalutation_dataset\"\n",
+    "destination_folder_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/balanced_dataset\"\n",
     "\n",
     "\n",
-    "split_and_balance_dataset(source_folders, destination_folder_path, train_ratio, val_ratio, test_ratio)"
+    "split_and_balance_dataset(\n",
+    "    source_folders, destination_folder_path, train_ratio, val_ratio, test_ratio\n",
+    ")"
    ]
   },
   {
